columns: fix Gutenberg columns stacking on small screens

--- a/style/blocks/_columns.scss
+++ b/style/blocks/_columns.scss
@@ -19,13 +19,8 @@
 		padding-top: 0;
 		padding-bottom: 0;
 	}
-	
-	.wp-block-column {
-		margin-bottom: 0;
-	}
 
-	.wp-block-column:nth-of-type(2) {
-		margin-bottom: 0;
+	.wp-block-column:nth-child(2n) {
 
 		h2 {
 			margin-top: 0;
@@ -37,6 +32,16 @@
 	}
 
 	@media screen and (min-width: 600px) {
+
+		.wp-block-column:nth-child(2n) {
+			//Fix Gutenberg native columns stacking on small screens
+			padding-left: 32px;
+			margin-left: 0;
+	
+			h2 {
+				margin-top: 0;
+			}
+		}
 		
 		&.is-style-split,
 		&.is-style-split-inverted {
